resource error handler

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -1,2 +1,6 @@
 welcome.msg=Willkommen bei basic recruiter rest-api
 locale.msg=Botschaft
+resource.not.found=Die angegebene Ressource konnte nicht gefunden werden
+offer.not.found=Jobangebot existiert nicht
+offer.title.exists=Berufsbezeichnung existiert bereits
+application.exists=Bewerbung existiert bereits
