--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,2 +1,10 @@
 welcome.msg=Welcome to basic recruiter rest-api
 locale.msg=Message
+resource.not.found=Unable to find the specified resource
+# offer
+offer.not.found=Job offer does not exist
+offer.title.exists=Job title already exists
+
+#application
+application.exists=Job application already exists
+
